[package]
name = "minizensical"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
minijinja = "2.12"
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"
